# rustris

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
rustris-cmdl/: Cargo.toml
rustris-cmdl/src/: board.rs  common.rs  curses_ui.rs  game.rs  main.rs
rustris-core/: Cargo.toml
rustris-core/src/: block.rs  board.rs  common.rs  game.rs  lib.rs  model.rs  tetromino.rs
rustris-wasm/: Cargo.toml  rustris.html  web_ui.js
rustris-wasm/src/: lib.rs
src/: board.rs  common.rs  controller.rs  curses_ui.rs  game.rs  main.rs  model.rs  view.rs
