[package]
name = "rustris-cmdl"
version = "0.1.0"
authors = ["Christian Grage"]
description = "Rustris, a tile matching video game written in the rust programming language"
license = "MIT/Apache-2.0"
repository = "https://github.com/cgrage/rustris"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pancurses = "0.16"
rand = "0.7.3"