[package]
name = "rustris-core"
version = "0.1.0"
authors = ["Christian Grage <christian.grage@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
